fix(ui): alignement svg

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1089,6 +1089,12 @@ input[type=number] {
   
 }
 
+.qrCodeContainer {
+  svg {
+    transform: scale(1.05);
+  }
+}
+
 /***********************************************
  *  Utils styles
  ***********************************************/
